Adjust style, attempt to fix js
Unsuccessfully

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <div class="header">Guess My Card</div>
   <div class="deck"></div>
   <div class="card-slot"></div>
-  <div class="text"></div>
+  <div class="text">Shall We Play?</div>
   <button class= "button" id="new-game-button">New Game</button>
   <button class ="suit button" id="diamonds-button" data-suit='♦'>Diamonds</button>
   <button class ="suit button" id="clubs-button" data-suit='♣'>Clubs</button>
